[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Screens/Exercicios/BackgroundAnimaisGames.png" type="Texture" id=1]
[ext_resource path="res://Assets/Quests/Lion.png" type="Texture" id=2]
[ext_resource path="res://Assets/Quests/download (1).png" type="Texture" id=3]
[ext_resource path="res://Assets/Quests/coe.png" type="Texture" id=4]
[ext_resource path="res://Assets/Quests/bird (1).png" type="Texture" id=5]
[ext_resource path="res://Assets/Quests/goat.png" type="Texture" id=6]
[ext_resource path="res://Assets/Quests/Photoshop_OCnKyGetkP.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Maps/Exercise/TelaAnimais.gd" type="Script" id=8]
[ext_resource path="res://AssetsMenu/menugames.tres" type="Texture" id=9]

[sub_resource type="Animation" id=1]
resource_name = "Entrando"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0.807843 ), Color( 0, 0, 0, 0.705882 ), Color( 0, 0, 0, 0.631373 ), Color( 0, 0, 0, 0.556863 ), Color( 0, 0, 0, 0.501961 ), Color( 0, 0, 0, 0.45098 ), Color( 0, 0, 0, 0.278431 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Transição"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.278431 ), Color( 0, 0, 0, 0.45098 ), Color( 0, 0, 0, 0.556863 ), Color( 0, 0, 0, 0.705882 ), Color( 0, 0, 0, 0.811765 ), Color( 0, 0, 0, 1 ) ]
}

[node name="TelaAnimais" type="Node2D"]
script = ExtResource( 8 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 512, 300 )
scale = Vector2( 1.43619, 1.2024 )
texture = ExtResource( 1 )

[node name="Button" type="TextureButton" parent="."]
margin_left = 402.0
margin_top = 136.0
margin_right = 1426.0
margin_bottom = 1160.0
rect_scale = Vector2( 0.08, 0.08 )
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="TextureButton" parent="."]
margin_left = 389.0
margin_top = 262.0
margin_right = 901.0
margin_bottom = 774.0
rect_scale = Vector2( 0.2, 0.2 )
texture_normal = ExtResource( 2 )

[node name="Button3" type="TextureButton" parent="."]
margin_left = 402.0
margin_top = 408.0
margin_right = 657.0
margin_bottom = 707.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="TextureButton" parent="."]
margin_left = 602.0
margin_top = 130.0
margin_right = 1241.0
margin_bottom = 769.0
rect_scale = Vector2( 0.15, 0.15 )
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button5" type="TextureButton" parent="."]
margin_left = 598.0
margin_top = 260.0
margin_right = 1110.0
margin_bottom = 772.0
rect_scale = Vector2( 0.2, 0.2 )
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button6" type="TextureButton" parent="."]
margin_left = 602.0
margin_top = 410.0
margin_right = 827.0
margin_bottom = 635.0
rect_scale = Vector2( 0.4, 0.4 )
texture_normal = ExtResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="Button7" type="TextureButton" parent="."]
margin_left = 502.925
margin_top = 488.918
margin_right = 602.925
margin_bottom = 588.918
rect_scale = Vector2( 0.7, 0.7 )
texture_normal = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Entrando = SubResource( 1 )
"anims/Transição" = SubResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_top = -3.0
margin_right = 1024.0
margin_bottom = 602.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="Button6" to="." method="_on_Button6_pressed"]
[connection signal="pressed" from="Button7" to="." method="_on_Button7_pressed"]
